--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <header>
-        <!-- <div class="container"> -->
-        <!-- <div class="row"> -->
+    <header class="container">
+
+
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img class="img-fluid" src="images/logo.png" alt=""></a>
@@ -41,67 +41,116 @@
                 </div>
             </div>
         </nav>
-        </div>
-        </div>
-    </header>
-    <main>
-        <!-- Carousel -->
-        <div class="container">
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner panda-bg-info">
-                    <div class="carousel-item active">
-                        <div class="row align-items-center">
-                            <div class="col-md-6">
-                                <h5>Cool Dude Headphone</h5>
-                                <p>This is the best headphone in the world for people who just want to waste time in
-                                    front
-                                    of
-                                    funky world.</p>
-                                <h6>$460</h6>
-                                <button class="btn btn-danger">Buy Now</button>
 
 
+
+        <!-- Carousel  Start-->
+        <section class="pt-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>Cool Dude Headphone</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>$420</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
                             </div>
-                            <div class="col-md-6"><img src="images/banner-images/headphone.png" class="img-fluid"
-                                    alt="">
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-item  bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>Mega LCD TV For SportsCool Dude Headphone</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>$1200</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-item  bg-info border rounded p-5">
+                        <div class="row">
+                            <div class="col-lg-7 d-flex align-items-center ">
+                                <div>
+                                    <h2>X-Box for your living room</h2>
+                                    <p>This is the best headphone in the world for people who just want to waste time in
+                                        front of funky world.</p>
+                                    <h1>$600</h1>
+                                    <div class="btn btn-warning">Buy Now</div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
                         </div>
                     </div>
+
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
-        </div>
+        </section>
+
+
+        <!-- Carousel  End-->
+
+    </header>
+    <main>
+        <!-- Categories start -->
+        <section>
+            <div class="container text-center my-5">
+                <div class="row g-2">
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div
+                            class="p-3 border rounded-3 bg-warning text-white d-flex align-items-center justify-content-around ">
+                            <h2>Watch</h2>
+                            <img src="images/categories/watch.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div
+                            class="p-3 border rounded-3 bg-success text-white d-flex align-items-center justify-content-around ">
+                            <h2>Bag</h2>
+                            <img src="images/categories/bag.png" alt="">
+                        </div>
+                    </div>
+                    <!-- single category -->
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div
+                            class="p-3 border rounded-3 bg-primary text-white d-flex align-items-center justify-content-around ">
+                            <h2>Shoes</h2>
+                            <img src="images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+
+
+
+                </div>
+            </div>
+        </section>
+        <!-- Categories end -->
     </main>
 
 
